overlays/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: text2image-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /imageGenerator/?(.*)
            pathType: Prefix
            backend:
              service:
                name: text2image-api-service
                port:
                  number: 8081
